@@ -1,7 +1,7 @@
 source "http://gemcutter.org"
 
-gem "gosu", "~>0.7.27"
+gem "gosu", "=0.7.29"
 gem "chingu", "~>0.9rc4"
-gem "chipmunk", "~>5.3.4.0"
+gem "chipmunk", "=5.2.2.0"
 gem "fidgit", "~>0.0.5alpha"
 gem "texplay", "~>0.3.5"
