@@ -1,0 +1,5 @@
+module CP
+  module Shape
+    attr_accessor :object
+  end
+end
